@@ -218,7 +218,7 @@ public abstract class MavenTestCase extends UsefulTestCase {
   }
 
 
-  private void checkAllMavenConnectorsDisposed() {
+  private static void checkAllMavenConnectorsDisposed() {
     assertEmpty("all maven connectors should be disposed", MavenServerManager.getInstance().getAllConnectors());
   }
 
@@ -366,7 +366,7 @@ public abstract class MavenTestCase extends UsefulTestCase {
   protected VirtualFile createSettingsXml(String innerContent) throws IOException {
     var content = createSettingsXmlContent(innerContent);
     var path = Path.of(myDir.getPath(), "settings.xml");
-    Files.write(path, content.getBytes(StandardCharsets.UTF_8));
+    Files.writeString(path, content);
     getMavenGeneralSettings().setUserSettingsFile(path.toString());
     return LocalFileSystem.getInstance().refreshAndFindFileByNioFile(path);
   }
@@ -426,10 +426,7 @@ public abstract class MavenTestCase extends UsefulTestCase {
     VirtualFile f = dir.findChild("pom.xml");
     if (f == null) {
       try {
-        f = WriteAction.computeAndWait(() -> {
-          VirtualFile res = dir.createChildData(null, "pom.xml");
-          return res;
-        });
+        f = WriteAction.computeAndWait(() -> dir.createChildData(null, "pom.xml"));
       }
       catch (IOException e) {
         throw new RuntimeException(e);
@@ -441,15 +438,15 @@ public abstract class MavenTestCase extends UsefulTestCase {
   }
 
   @NonNls
-  @Language(value = "XML")
+  @Language("XML")
   public static String createPomXml(@NonNls @Language(value = "XML", prefix = "<project>", suffix = "</project>") String xml) {
-    return "<?xml version=\"1.0\"?>" +
-           "<project xmlns=\"http://maven.apache.org/POM/4.0.0\"" +
-           "         xmlns:xsi=\"http://www.w3.org/2001/XMLSchema-instance\"" +
-           "         xsi:schemaLocation=\"http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd\">" +
-           "  <modelVersion>4.0.0</modelVersion>" +
-           xml +
-           "</project>";
+    return """
+      <?xml version="1.0"?>
+      <project xmlns="http://maven.apache.org/POM/4.0.0"
+               xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+               xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+        <modelVersion>4.0.0</modelVersion>
+      """ + xml + "</project>";
   }
 
   protected VirtualFile createProfilesXmlOldStyle(String xml) {
@@ -484,10 +481,7 @@ public abstract class MavenTestCase extends UsefulTestCase {
     VirtualFile f = dir.findChild("profiles.xml");
     if (f == null) {
       try {
-        f = WriteAction.computeAndWait(() -> {
-          VirtualFile res = dir.createChildData(null, "profiles.xml");
-          return res;
-        });
+        f = WriteAction.computeAndWait(() -> dir.createChildData(null, "profiles.xml"));
       }
       catch (IOException e) {
         throw new RuntimeException(e);
@@ -498,7 +492,7 @@ public abstract class MavenTestCase extends UsefulTestCase {
   }
 
   @Language("XML")
-  private static String createValidProfiles(String xml, boolean oldStyle) {
+  private static String createValidProfiles(@Language("XML") String xml, boolean oldStyle) {
     if (oldStyle) {
       return "<?xml version=\"1.0\"?>" +
              "<profiles>" +
@@ -601,10 +595,10 @@ public abstract class MavenTestCase extends UsefulTestCase {
   protected static <T> void assertContain(Collection<? extends T> actual, T... expected) {
     List<T> expectedList = Arrays.asList(expected);
     if (actual.containsAll(expectedList)) return;
-    Set<T> absent = new HashSet<T>(expectedList);
+    Set<T> absent = new HashSet<>(expectedList);
     absent.removeAll(actual);
-    fail("expected: " + expectedList + "\n" + "actual: " + actual.toString() +
-         "\nthis elements not present: " + absent.toString());
+    fail("expected: " + expectedList + "\n" + "actual: " + actual +
+         "\nthis elements not present: " + absent);
   }
 
   protected static <T> void assertDoNotContain(List<T> actual, T... expected) {
